[project]
name = "pneumatic-gun-simulators"
version = "0.1.0"
description = "Simulators for precompressed air and spring piston guns"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
nomad-simulator = "nomad_ui:main"
spring-piston-simulator = "spring_piston_gui:main"

[tool.uv]
python-preference = "only-managed"